--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "@portabletext/react": "^1.0.6",
     "@sanity/image-url": "^1.0.1",
     "aos": "^3.0.0-beta.6",
